frontend/styles/index.css
@charset "UTF-8";

@font-face {
  font-display: swap;
  font-family: "et-book";
  font-style: normal;
  font-weight: normal;
  font-variant-ligatures: normal;
  src: url("/font/et-book-ot-roman.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "et-book";
  font-style: italic;
  font-weight: normal;
  font-variant-ligatures: normal;
  src: url("/font/et-book-ot-italic.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "et-book";
  font-style: normal;
  font-weight: bold;
  font-variant-ligatures: normal;
  src: url("/font/et-book-ot-bold.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "et-book-roman-old-style";
  font-style: normal;
  font-weight: normal;
  src: url("/font/et-book-roman-old-style-figures.woff2") format("woff2");
}

* {
  box-sizing: border-box;
}

/* Tufte CSS styles */
html {
  font-size: 15px;
  hanging-punctuation: first last;
}

body {
  background-color: #fffff8;
  color: #111;
  counter-reset: sidenote-counter;
  display: flex;
  flex-direction: column;
  font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
  margin: 0 auto;
  max-width: 90em;
  min-height: 100vh;
  padding-left: 1em;
  padding-right: 1em;
}

main {
  flex: 1;
}

/* Adds dark mode */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #000;
    color: #efefef;
  }

  html {
    background-color: #000;
  }

  figure > svg path {
    stroke: #fff;
  }

  figure > svg text {
    fill: #efefef;
  }

  a:link, .tufte-underline, .hover-tufte-underline:hover {
    background: -webkit-linear-gradient(#000, #000), -webkit-linear-gradient(#000, #000), -webkit-linear-gradient(currentColor, currentColor);
    background: linear-gradient(#000, #000), linear-gradient(#000, #000), linear-gradient(currentColor, currentColor);
  }
}

h1 {
  font-size: 3.2rem;
  font-weight: 400;
  line-height: 1.125;
  margin-bottom: 1.5rem;
  margin-top: 3rem;
}

h2 {
  font-size: 2.2rem;
  font-style: italic;
  font-weight: 400;
  line-height: 1.152;
  margin-bottom: 1.4rem;
  margin-top: 2.1rem;
}

h3 {
  font-size: 1.7rem;
  font-style: italic;
  font-weight: 400;
  line-height: 1.138;
  margin-bottom: 1.4rem;
  margin-top: 2rem;
}

hr {
  border-top: 1px solid #ccc;
  border: 0;
  display: block;
  height: 1px;
  margin: 1em 0;
  padding: 0;
  width: 63%;
}

p.subtitle {
  display: block;
  font-size: 1.8rem;
  font-style: italic;
  line-height: 1;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.numeral {
  font-family: et-book-roman-old-style;
}

.danger {
  color: red;
}

header {
  display: grid;
}

article {
  padding: 5rem 0rem;
}

section {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

section > ul {
  margin-top: 0;
}

section > h2 {
  margin-top: 1rem;
}

p,
dl,
ol,
ul {
  font-size: 1.4rem;
  line-height: 2rem;
}

ol ol {
  list-style-type: lower-latin;
}

ol ol ol {
  list-style-type: lower-roman;
}

p {
  margin-bottom: 1.4rem;
  margin-top: 1.4rem;
  padding-right: 0;
  vertical-align: baseline;
}

hr {
  border-top: 1px solid #efefef;
}

/* Chapter Epigraphs */
.epigraph {
  margin: 5em 0;
}

main > h1 + blockquote,
.epigraph > blockquote {
  margin-bottom: 3em;
  margin-top: 3em;
}

section > blockquote {
  margin-bottom: 1.4em;
  margin-top: 1.4em;
}

main > h1 + blockquote,
section > blockquote,
section > blockquote + dl dt,
.epigraph > blockquote,
.epigraph > blockquote > p {
  font-style: italic;
}

.epigraph > blockquote > footer {
  font-style: normal;
}

.epigraph > blockquote > footer > cite {
  font-style: italic;
}
/* end chapter epigraphs styles */

blockquote {
  font-size: 1.4rem;
}

blockquote p {
  margin-right: 40px;
  width: 63%;
}

blockquote footer {
  font-size: 1.1rem;
  text-align: right;
  width: 63%;
}

section > p,
section > footer,
section > table {
  width: 63%;
}

/* 50 + 5 == 55, to be the same width as paragraph */
section > dl,
section > ol,
section > ul {
  width: 63%;
}

li:not(:first-child) {
  margin-top: 0.25rem;
}

dt:not(:first-child) {
  margin-top: 1rem;
}

figure {
  border: 0;
  font-size: 100%;
  font: inherit;
  margin: 0 0 3em 0;
  -webkit-margin-end: 0;
  -webkit-margin-start: 0;
  max-width: 63%;
  padding: 0;
  vertical-align: baseline;
}

figcaption {
  clear: right;
  float: right;
  font-size: 1.1rem;
  line-height: 1.6;
  margin-bottom: 0;
  margin-top: 0;
  max-width: 40%;
  position: relative;
  vertical-align: baseline;
}

figure.fullwidth figcaption {
  margin-right: 24%;
}

/* Links: replicate underline that clears descenders */
a:link,
a:visited {
  color: inherit;
}

.no-tufte-underline:link {
  background: unset;
  text-shadow: unset;
}

a:link, .tufte-underline, .hover-tufte-underline:hover {
  background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(currentColor, currentColor);
  background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(currentColor, currentColor);
  background-position: 0% 93%, 100% 93%, 0% 93%;
  -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
  -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
  background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
  background-repeat: no-repeat, no-repeat, repeat-x;
  text-decoration: none;
  text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
}

@media screen and (-webkit-min-device-pixel-ratio: 0) {
  a:link, .tufte-underline, .hover-tufte-underline:hover {
    background-position-y: 87%, 87%, 87%;
  }
}
/* ... */

